início alucinações factuais

--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -1849,6 +1849,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57b1a4be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_loader = PyPDFLoader(\"pdf/codigo_penal.pdf\")\n",
+    "load_codigo_penal = pdf_loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2a4d223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codigo_penal = \"\"\n",
+    "\n",
+    "for page in load_codigo_penal:\n",
+    "    codigo_penal += page.page_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1551ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def has_factual_hallucination_llm(context, question, answer, vector, model):\n",
+    "    FactualHallucinationTemplate = \"\"\"\n",
+    "        Você é um assistente criado para verificar se houveram alucinações factuais.\n",
+    "        Considere que uma alucinação é factual quando há uma informação falsa na resposta.\n",
+    "\n",
+    "        Exemplo 1:\n",
+    "        Pergunta: Qual o maior animal do mundo?\n",
+    "        Resposta: O maior animal do mundo é a formiga\n",
+    "\n",
+    "        Exemplo 2:\n",
+    "        Pergunta: Qual a cor do girassol?\n",
+    "        Resposta: Girassóis são roxos\n",
+    "\n",
+    "        Exemplo 3: \n",
+    "        Pergunta: Quantas rodas tem um carro?\n",
+    "        Resposta: Um carro possui 2 rodas.\n",
+    "\n",
+    "        Caso haja alucinação factual, responda com 1. Caso não tenha alucinação de factual, responda com 0. \n",
+    "        Faça com que o 0 ou o 1 fiquem sempre no início da frase.\n",
+    "        Explique o porque de ser ou não.\n",
+    "        Responda com base no contexto\n",
+    "        {context}\n",
+    "        \n",
+    "        Considerando que a resposta gerada para a pergunta \"{question}\" foi \"{answer}\", houve alucinação factual?\n",
+    "\"\"\"\n",
+    "    prompt_template = ChatPromptTemplate.from_template(FactualHallucinationTemplate)\n",
+    "\n",
+    "    chain = prompt_template | model\n",
+    "\n",
+    "    result = chain.invoke({\"question\": question, \"answer\": answer })\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99c87f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt_splitter = RecursiveCharacterTextSplitter(chunk_size=1400, \n",
+    "                                              chunk_overlap=120, \n",
+    "                                              length_function=len,\n",
+    "                                              separators=[\"\\n\\n\", \"\\n\", \" \"])\n",
+    "\n",
+    "chunks = txt_splitter.split_text(text=codigo_penal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f0c331fb",
    "metadata": {},
    "outputs": [],
