alucinações factuais - gpt - deepseek

--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -2897,6 +2897,16 @@
     "df_factual_veredict_gpt_ds = pd.DataFrame(has_hallucination_gpt_ds)\n",
     "df_factual_veredict_gpt_ds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b5f95b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_factual_veredict_gpt_ds.to_csv(\"llm-output/factual_hallucination_deepseek_gpt.csv\")"
+   ]
   }
  ],
  "metadata": {
