alucinações contextuais - gpt

--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -2221,46 +2221,15 @@
    "execution_count": null,
    "id": "7e03d1c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 não existe\n",
-      "0. Não há alucinação contextual nesse texto. O texto discute a lei penal e o conceito de difamação, apresentando uma discussão sobre a prova da verdade da imputação e as exceções previstas no Código Penal. As ideias são lógicas e coerentes entre si, não há contradições ou conexões aleatórias entre os assuntos.\n",
-      "2 não existe\n",
-      "0. Não houve alucinação contextual.\n",
-      "\n",
-      "A resposta se refere a uma descrição sobre o Código Penal e suas penas, sem apresentar qualquer contradição ou falta de lógica entre as ideias. A informação é coerente e segue um fluxo natural de pensamento, não apresentando nenhum erro de contexto.\n",
-      "3 não existe\n",
-      "0. Não houve alucinação contextual.\n",
-      "\n",
-      "A explicação está no texto mesmo: o artigo 297 do Código Penal tipifica o crime de falsificação de documento público, e as condutas que configuram esse crime são listadas subsequentemente. O texto não apresenta qualquer contradição ou conexão improvável entre diferentes informações.\n",
-      "4 não existe\n",
-      "0. Não há alucinação contextual nesse texto porque as informações apresentadas sobre o Código Penal e as qualificadoras de dano são lógicas e coerentes, não há contradições ou conexões inesperadas entre os assuntos mencionados. O texto discorre sobre a legislação penal e a interpretação jurisprudencial sem mostrar qualquer tipo de alucinação contextual.\n",
-      "5 não existe\n",
-      "0. Não há alucinação contextual nesse texto. O texto é uma explicação técnica sobre o crime de extorsão e suas diferentes formas de manifestação, e todas as informações são lógicas e coerentes entre si. A apresentação das ações que configuram o crime é clara e não há nenhuma contradição ou incongruência entre elas.\n",
-      "6 não existe\n",
-      "0. Não há alucinação contextual nesse texto.\n",
-      "\n",
-      "A razão é que as informações fornecidas são logicamente consistentes e não apresentam nenhuma contradição entre elas. O texto descreve a regra de um crime prevista no Código Penal, e todas as palavras fazem sentido quando lidas uma após a outra. Não há nenhum elemento que contradiga ou surja como uma alucinação contextual.\n",
-      "7 não existe\n",
-      "0.\n",
-      "\n",
-      "Explicação: O texto apresenta uma seqüência lógica e consistente entre as ideias. As causas gerais de redução do prazo de prescrição estão relacionadas ao artigo 115 do Código Penal e são explicadas logicamente. Não há alucinação contextual nesse caso, pois todas as informações se encaixam naturalmente no texto.\n",
-      "8 não existe\n",
-      "0. Não há alucinação contextual. O texto está relacionado ao Código Penal e prevê penas para crimes específicos, incluindo o sequestro e cárcere privado. A estrutura do texto é lógica e sequencial, não apresentando contradições ou irregularidades que possam caracterizar uma alucinação contextual.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "llama_context_hallucination_dps = answerer(df_gemini_answers, model_llama, \n",
+    "llama_context_hallucination_gm = answerer(df_gemini_answers, model_llama, \n",
     "                                           has_hallucination_llama_gm, hallucination_type=\"context\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "303866bb",
    "metadata": {},
    "outputs": [],
@@ -2270,23 +2239,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "41978f04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>context_hallucination_reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Como o código trata o crime de difamação quand...</td>\n",
+       "      <td>No crime de difamação (art. 139 do Código Pena...</td>\n",
+       "      <td>0. Não há alucinação contextual nesse texto. O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Qual a pena prevista para injúria quando há ut...</td>\n",
+       "      <td>A injúria, prevista no artigo 140 do Código Pe...</td>\n",
+       "      <td>0. Não houve alucinação contextual.\\n\\nA respo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Quais práticas configuram o crime de falsifica...</td>\n",
+       "      <td>O artigo 297 do Código Penal tipifica o crime ...</td>\n",
+       "      <td>0. Não houve alucinação contextual.\\n\\nA expli...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Como o Código Penal trata o crime de dano qual...</td>\n",
+       "      <td>O crime de dano simples está previsto no artig...</td>\n",
+       "      <td>0. Não há alucinação contextual nesse texto po...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Quais ações constituem o crime de extorsão?</td>\n",
+       "      <td>No Brasil, o crime de extorsão está previsto n...</td>\n",
+       "      <td>0. Não há alucinação contextual nesse texto. O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Como a legislação penal brasileira trata o rei...</td>\n",
+       "      <td>O reingresso de estrangeiro que foi expulso do...</td>\n",
+       "      <td>0. Não há alucinação contextual nesse texto.\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Quais fatores podem reduzir o prazo de prescri...</td>\n",
+       "      <td>O Código Penal prevê duas causas gerais de red...</td>\n",
+       "      <td>0.\\n\\nExplicação: O texto apresenta uma seqüên...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Como o Código Penal regula o crime de sequestr...</td>\n",
+       "      <td>O crime de sequestro e cárcere privado está pr...</td>\n",
+       "      <td>0. Não há alucinação contextual. O texto está ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Quais as agravantes para o homicídio qualifica...</td>\n",
+       "      <td>O homicídio qualificado está previsto no artig...</td>\n",
+       "      <td>0.\\n\\nExplicação: O texto apresenta uma lista ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Em que condições o condenado poderá exercer tr...</td>\n",
+       "      <td>A Lei de Execução Penal (Lei nº 7.210/84) esta...</td>\n",
+       "      <td>0. Não há alucinação de contexto nesse texto. ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                           question  \\\n",
+       "0   1  Como o código trata o crime de difamação quand...   \n",
+       "1   2  Qual a pena prevista para injúria quando há ut...   \n",
+       "2   3  Quais práticas configuram o crime de falsifica...   \n",
+       "3   4  Como o Código Penal trata o crime de dano qual...   \n",
+       "4   5        Quais ações constituem o crime de extorsão?   \n",
+       "5   6  Como a legislação penal brasileira trata o rei...   \n",
+       "6   7  Quais fatores podem reduzir o prazo de prescri...   \n",
+       "7   8  Como o Código Penal regula o crime de sequestr...   \n",
+       "8   9  Quais as agravantes para o homicídio qualifica...   \n",
+       "9  10  Em que condições o condenado poderá exercer tr...   \n",
+       "\n",
+       "                                              answer  \\\n",
+       "0  No crime de difamação (art. 139 do Código Pena...   \n",
+       "1  A injúria, prevista no artigo 140 do Código Pe...   \n",
+       "2  O artigo 297 do Código Penal tipifica o crime ...   \n",
+       "3  O crime de dano simples está previsto no artig...   \n",
+       "4  No Brasil, o crime de extorsão está previsto n...   \n",
+       "5  O reingresso de estrangeiro que foi expulso do...   \n",
+       "6  O Código Penal prevê duas causas gerais de red...   \n",
+       "7  O crime de sequestro e cárcere privado está pr...   \n",
+       "8  O homicídio qualificado está previsto no artig...   \n",
+       "9  A Lei de Execução Penal (Lei nº 7.210/84) esta...   \n",
+       "\n",
+       "                        context_hallucination_reason  \n",
+       "0  0. Não há alucinação contextual nesse texto. O...  \n",
+       "1  0. Não houve alucinação contextual.\\n\\nA respo...  \n",
+       "2  0. Não houve alucinação contextual.\\n\\nA expli...  \n",
+       "3  0. Não há alucinação contextual nesse texto po...  \n",
+       "4  0. Não há alucinação contextual nesse texto. O...  \n",
+       "5  0. Não há alucinação contextual nesse texto.\\n...  \n",
+       "6  0.\\n\\nExplicação: O texto apresenta uma seqüên...  \n",
+       "7  0. Não há alucinação contextual. O texto está ...  \n",
+       "8  0.\\n\\nExplicação: O texto apresenta uma lista ...  \n",
+       "9  0. Não há alucinação de contexto nesse texto. ...  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_context_veredict_llama_ds = pd.DataFrame(has_hallucination_llama_gm)\n",
-    "df_context_veredict_llama_ds"
+    "df_context_veredict_llama_gm = pd.DataFrame(has_hallucination_llama_gm)\n",
+    "df_context_veredict_llama_gm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fb9863d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_context_veredict_llama_ds.to_csv(\"llm-output/context_hallucination_gemini_llama.csv\")"
+    "df_context_veredict_llama_gm.to_csv(\"llm-output/context_hallucination_gemini_llama.csv\")"
    ]
   },
   {
